feat: add validation